update validation error response